--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.2.0"
+    "helmet": "^4.2.0",
+    "passport": "^0.4.1",
+    "passport-steam": "^1.0.14"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.11.0",
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/helmet": "^4.0.0",
     "@types/node": "^14.14.7",
+    "@types/passport": "^1.0.4",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
