--- a/package.json
+++ b/package.json
@@ -29,7 +29,15 @@
     "@types/helmet": "^4.0.0",
     "@types/node": "^14.14.7",
     "@types/passport": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.6",
+    "prettier": "2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
