--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
     "@types/passport": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -36,8 +38,10 @@
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "2.1.2",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
