--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.11.0",
+    "@types/lodash.merge": "^4.6.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
+    "lodash.merge": "^4.6.2",
     "passport": "^0.4.1",
     "passport-steam": "^1.0.14"
   },
