--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.11.0",
+    "@types/express-session": "^1.17.2",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash.merge": "^4.6.6",
+    "@types/passport-steam": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
     "passport": "^0.4.1",
     "passport-steam": "^1.0.14"
