--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash.merge": "^4.6.6",
     "@types/passport-steam": "^1.0.1",
+    "axios": "^0.21.0",
+    "big-integer": "^1.6.48",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
