--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npm run build"
+  },
+  "engines": {
+    "node": "14.15.0"
   },
   "keywords": [],
   "author": "",
