--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.4.2",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
