--- a/package.json
+++ b/package.json
@@ -19,22 +19,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.11.0",
-    "@types/express-session": "^1.17.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash.merge": "^4.6.6",
-    "@types/passport-steam": "^1.0.1",
     "axios": "^0.21.0",
-    "big-integer": "^1.6.48",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "firebase-admin": "^9.4.2",
     "helmet": "^4.2.0",
+    "json-typescript-mapper": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
-    "passport": "^0.4.1",
-    "passport-steam": "^1.0.14"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@prisma/cli": "^2.11.0",
@@ -44,7 +41,6 @@
     "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
-    "@types/passport": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
